# Health

./: .editorconfig  .env.example  .gitignore  LICENSE  README.md  RayK A1功能医学AI健康系统（美国原版经营体系）.md  compose.dev.yml  compose.prod.yml  compose.yml  handoff.md
database/: README.md
database/init/: README.md
database/migrations/: V10__extended_health_profile.sql  V11__privacy_consent.sql  V14__support_ticket.sql  (+24 more)
deploy/: README.md
docs/: RayK_A1_五角色功能与业务完整闭环说明_打印版.docx  api-design.md  architecture.md  database-design.md  development-plan.md  docker-deployment.md  miniapp-design.md  permission-design.md  roadmap.md
rayk-ai/: .env.example  Dockerfile  Dockerfile.test  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
rayk-ai/app/: main.py
rayk-ai/app/api/: router.py
rayk-ai/app/core/: constants.py  middleware.py  request_context.py
rayk-ai/app/interpretation/: __init__.py  service.py
rayk-ai/app/normalization/: service.py
rayk-ai/app/ocr/: service.py
rayk-ai/app/report/: service.py
rayk-ai/app/schemas/: assessment.py  common.py  indicator.py  ocr.py  report.py
rayk-ai/app/scoring/: engine.py
rayk-ai/tests/: test_api.py  test_ocr_parser.py
rayk-miniapp/: .env.example  .npmrc  Dockerfile.h5  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
rayk-server/: Dockerfile  maven-settings.xml  pom.xml
scripts/: backup-mysql.ps1  backup-mysql.sh  build-all.ps1  build-all.sh  restore-mysql.ps1  restore-mysql.sh  start-dev.ps1  start-dev.sh  stop-dev.ps1  stop-dev.sh  test-deepseek.ps1
(+294 files in other folders)
